--- a/bem/blocks/b-faq-block/b-faq-block.less
+++ b/bem/blocks/b-faq-block/b-faq-block.less
@@ -1,11 +1,10 @@
-@import '~i-variables/i-variables';
+
 @import '~i-less/i-less';
 
 .b-faq-block {
+    position: relative;
     padding: 24px 30px;
     margin: 0 0 24px;
-    position: relative;
-
     .desktop({
         padding: 40px 50px;
     });
@@ -26,11 +25,10 @@
 
     &__title {
         position: relative;
-        font: normal 20px/24px @face;
-        font-weight: bold;
         padding: 0 0 0 35px;
         margin: 0 0 15px;
-
+        font: normal 20px/24px @face;
+        font-weight: bold;
         .desktop({
             padding-right: 170px;
         });
@@ -38,18 +36,18 @@
 
     &__icon {
         display: block;
+        position: absolute;
+        top: 0;
+        left: 0;
         width: 24px;
         height: 24px;
-        position: absolute;
-        top: 0px;
-        left: 0px;
-        background-repeat: no-repeat;
         background-position: center;
+        background-repeat: no-repeat;
     }
 
     &__content {
-        font: normal 15px/24px @face;
         overflow: auto;
+        font: normal 15px/24px @face;
     }
 
     &__download-link {
@@ -57,19 +55,19 @@
         position: absolute;
         top: 40px;
         right: 50px;
-        padding: 0 0 0 30px;
         z-index: 1;
+        padding: 0 0 0 30px;
     }
 
     &__download-link-icon {
         display: block;
         position: absolute;
-        top: 0px;
-        left: 0px;
-        background-position: center;
-        background-repeat: no-repeat;
+        top: 0;
+        left: 0;
         width: 24px;
         height: 24px;
+        background-position: center;
+        background-repeat: no-repeat;
     }
 
     &__addon {
