Изменил на @font-normal

--- a/bem/blocks/b-faq-block/b-faq-block.less
+++ b/bem/blocks/b-faq-block/b-faq-block.less
@@ -27,7 +27,7 @@
         position: relative;
         padding: 0 0 0 35px;
         margin: 0 0 15px;
-        font: normal 20px/24px @face;
+        font: @font-size-normal: 20px/@line-height-normal: 24px @face;
         font-weight: bold;
         .desktop({
             padding-right: 170px;
@@ -47,7 +47,7 @@
 
     &__content {
         overflow: auto;
-        font: normal 15px/24px @face;
+        font: @font-size-normal: 15px/@line-height-normal: 24px @face;
     }
 
     &__download-link {
