--- a/bem/blocks/b-arrows-navigation/b-arrows-navigation.less
+++ b/bem/blocks/b-arrows-navigation/b-arrows-navigation.less
@@ -8,9 +8,9 @@
 
     &__controls-text {
         display: table-cell;
+        padding: 0;
+        margin: 0;
         vertical-align: middle;
-        margin: 0px;
-        padding: 0px;
     }
 
     &__arrow-relative-wrapper {
@@ -22,16 +22,16 @@
     }
 
     &__prev {
-        position: relative;
-        font: @font-medium !important;
-        color: #515151 !important;
-        margin: 0px;
         display: table-cell;
+        position: relative;
         width: 382px;
+        min-height: 60px;
         padding: @indent-h-large @indent-v-normal;
         padding-left: 72px;
+        margin: 0;
+        color: #515151 !important;
+        font: @font-medium !important;
         text-decoration: none;
-        min-height: 60px;
         text-decoration: none;
         outline: 5px solid #fff;
         vertical-align: middle;
@@ -40,13 +40,13 @@
 
         &:hover {
             outline: 5px solid #cdcdcd;
-            background-color: #ffffff;
+            background-color: #fff;
         }
 
         & @{bl}__arrow {
             position: absolute;
-            left: 12px;
             top: 50%;
+            left: 12px;
             margin-top: -25px;
             .i-triangle-left(25px, #515151, 15px);
         }
@@ -59,33 +59,33 @@
     }
 
     &__next {
-        position: relative;
-        font: @font-medium !important;
-        color: #515151 !important;
-        margin: 0px;
         display: table-cell;
+        position: relative;
         width: 358px;
+        min-height: 60px;
         padding: @indent-h-large @indent-v-normal;
         padding-right: 72px;
         padding-left: 50px;
-        text-decoration: none;
-        min-height: 60px;
-        text-decoration: none;
-        text-align: left;
+        margin: 0;
         outline: 5px solid #fff;
+        color: #515151 !important;
+        font: @font-medium !important;
+        text-align: left;
         vertical-align: middle;
+        text-decoration: none;
+        text-decoration: none;
         background-color: @button-color-default;
         transition: @transition-default;
 
         &:hover {
             outline: 5px solid #cdcdcd;
-            background-color: #ffffff;
+            background-color: #fff;
         }
 
-        & @{bl}__arrow  {
+        & @{bl}__arrow {
             position: absolute;
-            right: 12px;
             top: 50%;
+            right: 12px;
             margin-top: -25px;
             .i-triangle-right(25px, #515151, 15px);
         }
