--- a/bem/blocks/b-faq-block/b-faq-block.less
+++ b/bem/blocks/b-faq-block/b-faq-block.less
@@ -1,4 +1,3 @@
-
 @import '~i-less/i-less';
 
 .b-faq-block {
@@ -11,11 +10,11 @@
 
     &_type {
         &_code {
-            background: #f3f3f3;
+            background: @color-bg-default;
         }
 
         &_advice {
-            background: #fff5df;
+            background: @color-bg-hint;
         }
 
         &_warning {
@@ -27,7 +26,7 @@
         position: relative;
         padding: 0 0 0 35px;
         margin: 0 0 15px;
-        font: @font-size-normal: 20px/@line-height-normal: 24px @face;
+        font: @font-medium-compact @face;
         font-weight: bold;
         .desktop({
             padding-right: 170px;
@@ -37,8 +36,8 @@
     &__icon {
         display: block;
         position: absolute;
-        top: 0;
-        left: 0;
+        top: @indent-v-none;
+        left: @indent-h-none;
         width: 24px;
         height: 24px;
         background-position: center;
@@ -47,14 +46,14 @@
 
     &__content {
         overflow: auto;
-        font: @font-size-normal: 15px/@line-height-normal: 24px @face;
+        font: @font-normal @face;
     }
 
     &__download-link {
         display: block;
         position: absolute;
         top: 40px;
-        right: 50px;
+        right: @base-column-width;
         z-index: 1;
         padding: 0 0 0 30px;
     }
@@ -62,8 +61,8 @@
     &__download-link-icon {
         display: block;
         position: absolute;
-        top: 0;
-        left: 0;
+        top: @indent-v-none;
+        left: @indent-h-none;
         width: 24px;
         height: 24px;
         background-position: center;
