--- a/bem/blocks/b-arrows-navigation/b-arrows-navigation.less
+++ b/bem/blocks/b-arrows-navigation/b-arrows-navigation.less
@@ -30,8 +30,8 @@
         padding: @indent-h-large @indent-v-normal;
         padding-left: 72px;
         outline: 5px solid #fff;
-        color: @color-link-text !important;
-        font: @font-medium !important;
+        color: @color-link-text;
+        font: @font-medium;
         vertical-align: middle;
         text-decoration: none;
         background-color: @button-color-default;
@@ -66,8 +66,8 @@
         padding-right: 72px;
         padding-left: 50px;
         outline: 5px solid #fff;
-        color: @color-link-text !important;
-        font: @font-medium !important;
+        color: @color-link-text;
+        font: @font-medium;
         vertical-align: middle;
         text-align: left;
         text-decoration: none;
